[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Sensors/PressurePlate.gd" type="Script" id=1]
[ext_resource path="res://assets/Items/buttonGreen.png" type="Texture" id=2]
[ext_resource path="res://assets/Items/buttonGreen_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/uipack/Sound/click1.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.9314, 20.488 )

[node name="PressurePlateGreen" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.420448, 11.3521 )
shape = SubResource( 1 )

[node name="Textures" type="Node2D" parent="."]

[node name="ButtonPressed" type="Sprite" parent="Textures"]
visible = false
texture = ExtResource( 3 )

[node name="ButtonReleased" type="Sprite" parent="Textures"]
texture = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
